src/objects/MCL_Report__c.object
<CustomObject>
    <description>MCL</description>
    <fields>
        <fullName>Add_SOQL_Criteria__c</fullName>
        <description>Additional SOQL Criteria.  For Sys Admins only.</description>
        <label>Add SOQL Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bargaining_Units__c</fullName>
        <description>Comma-separated list of selected bargaining units.</description>
        <label>Bargaining Units</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code_List__c</fullName>
        <description>Codes to ignore responses of</description>
        <label>Code List</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns__c</fullName>
        <label>Columns</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>if (isblank(Employer__r.Coordinator__c), &quot;Vacant&quot;, 
Employer__r.Coordinator__r.FirstName &amp; &quot; &quot; &amp; Employer__r.Coordinator__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_CSS__c</fullName>
        <label>Custom CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Departments__c</fullName>
        <description>Comma-separated list of selected departments.</description>
        <label>Departments</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>text(Employer__r.Account_Group__c)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MCL_Report_Formats</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filter_Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>MCL Reports</relationshipLabel>
        <relationshipName>MCL_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filter_Survey_Response__c</fullName>
        <label>Filter Survey Response</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Classes__c</fullName>
        <description>Comma-separated list of selected job classes.</description>
        <label>Job Classes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Gamma__c</fullName>
        <defaultValue>0.2</defaultValue>
        <label>Map Gamma</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_Height__c</fullName>
        <defaultValue>300</defaultValue>
        <label>Map Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_Width__c</fullName>
        <defaultValue>300</defaultValue>
        <label>Map Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_Zoom_Level__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Map Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <formula>if (isblank(Employer__r.Organizer_1__c), &quot;Vacant&quot;, 
Employer__r.Organizer_1__r.FirstName &amp; &quot; &quot; &amp; Employer__r.Organizer_1__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <label>Page Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letter (8.5x11)</fullName>
                </value>
                <value>
                    <fullName>Legal (8.5x14)</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>Envelope #10</fullName>
                </value>
                <value>
                    <fullName>11x17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefilter_By_Current_BU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefilter By Current BU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefilter_Report_Tags__c</fullName>
        <description>Comma separated list of tags.  If any Contact record contains that tag in that record&apos;s Report Tags field, the Contact record will be included.</description>
        <label>Prefilter Report Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/MCL_Print?scontrolCaching=1&amp;id=&quot; &amp;  Id , Name)</formula>
        <label>Print Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_with_no_responses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only return records that don&apos;t have a survey response for the listed codes</description>
        <label>Ignore Contacts with following SR codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Director__c</fullName>
        <formula>if (isblank(Employer__r.Regional_Director__c), text(Employer__r.Region__c) &amp; &quot; - Vacant&quot;, 
Employer__r.Regional_Director__r.FirstName &amp; &quot; &quot; &amp; Employer__r.Regional_Director__r.LastName)</formula>
        <label>Reg Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_height__c</fullName>
        <defaultValue>4.0</defaultValue>
        <description>The number of headers that consume the same amount of vertical space as one record.</description>
        <inlineHelpText>The number of headers that consume the same amount of vertical space as one record.</inlineHelpText>
        <label>Row height (in headers)</label>
        <precision>9</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rows__c</fullName>
        <inlineHelpText>Maximum number of records to be displayed in one column.</inlineHelpText>
        <label>Rows</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sorting_Config__c</fullName>
        <label>Sorting Config</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Turf_String__c</fullName>
        <formula>Division__c &amp; &quot;/&quot; &amp;  Reg_Director__c &amp; &quot;/&quot; &amp;  Coordinator__c &amp; &quot;/&quot; &amp; Organizer__c  &amp; &quot;/&quot; &amp;   Employer__r.Name</formula>
        <label>Turf String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHW_Campaign_Name__c</fullName>
        <formula>UHW_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UHW Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHW_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>UHW Campaign</label>
        <referenceTo>UHW_Campaign__c</referenceTo>
        <relationshipName>MCL_Report_Formats</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>MCL Report</label>
    <listViews>
        <fullName>Dignity</fullName>
        <columns>NAME</columns>
        <columns>Employer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UHW_Campaign__c</field>
            <operation>contains</operation>
            <value>Phase 6</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Uncovered</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Commits</value>
        </filters>
        <label>Dignity-Phase 6 Uncovered with Commits</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dignity_Full_Employer_List</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Dignity Full Employer List</value>
        </filters>
        <label>Dignity-Full Employer Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dignity_Non_Covered_Nominated_Leader</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Employer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UHW_Campaign__c</field>
            <operation>contains</operation>
            <value>Phase 6</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Dignity-Non</value>
        </filters>
        <label>Dignity-Non Covered Nominated Leader</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dignity_Phase_6_Picket_Sign_in</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Dignity Phase 6 Picket Sign-in</value>
        </filters>
        <label>Dignity Phase 6 Picket Sign-in</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dignity_Phase_6_Uncovered_Lists</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Dignity Phase 6 Uncovered</value>
        </filters>
        <label>Dignity-Phase 6 Uncovered Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dignity_Uncovered_Nominated_Leader_Phase</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Non</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Dignity-Uncovered Nominated Leader</value>
        </filters>
        <label>Dignity-Uncovered Nom. Leader Phase 6</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EG_Kaiser_June_Sept_FULL_Facility_List</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>EG-Kaiser June-Sept 2018 Full Facility List</value>
        </filters>
        <label>EG-Kaiser June-Sept FULL Facility List</label>
        <language>en_US</language>
        <sharedTo>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kaiser_COPE_Facility_List</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Kaiser COPE Facility List</value>
        </filters>
        <label>Kaiser COPE Facility List</label>
        <language>en_US</language>
        <sharedTo>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kaiser_June_Aug_2018_CRE_Sign_in_Lists</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Kaiser June-Aug 2018 CRE Sign-in</value>
        </filters>
        <label>Kaiser June-Aug 2018 CRE Sign-in Lists</label>
        <language>en_US</language>
        <sharedTo>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Dignity_Full_Employer_List</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Non Dignity Full Employer List</value>
        </filters>
        <label>Non Dignity-Full Employer List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Dignity_Phase_6_Uncovered</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Non-Dig Phase 6 Uncovere</value>
        </filters>
        <label>Non Dignity- Phase 6 Uncovered</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Public_Hospitals</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>- Public Hospital</value>
        </filters>
        <label>Public Hospitals</label>
        <language>en_US</language>
        <sharedTo>
            <group>Full_Access_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sutter_Barg_Full_Lists</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Sutter Barg Full List</value>
        </filters>
        <label>Sutter Barg Full Lists</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MCL Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCL Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>